# insurance-recommendation

./: .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  render.yaml  requirements.txt  retrain.py  vars_list
data/: VariableDefinitions.txt
data/eda/: train_.csv
data/submissions/: sub_keras.csv  sub_xgboost.csv
notebooks/: eda-insurance-recommendation.ipynb  train-insurance-recommendation.ipynb
scripts/: predict.py  preprocessing.py  training.py
templates/: error.html  index.html  result.html  retrain.html
weights/: deep_learning.keras  model_comparison.csv
