[project]
name = "insurance-recommendation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "seaborn>=0.13.2",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "tensorflow>=2.15.0",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
]
